--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 16 13:55:40 GMT+09:00 2018
-sdk.dir=D\:\\Appdata\\Android\\sdk
+#Fri Jan 18 16:57:28 GMT+09:00 2019
+sdk.dir=C\:\\Users\\kaito9520\\AppData\\Local\\Android\\Sdk
